[package]
name = "sita"
version = "1.0.0"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.1.4"
assertables = "5.2.0"
base64 = "0.13.0"
bytes = "1.1.0"
clap = { version = "3.1.3", features = ["regex", "yaml", "wrap_help"] } # Command Line Argument Parser
confy = "0.4.0"
env_logger = "0.9.0"
error-chain = "0.12.4"
glob = "0.3.0"
handlebars = { version = "4.2.1", features = ["script_helper"] } # Template engine based on JavaScript Handlebars templates
httpdate = "1.0.2"
indoc = "1.0.4"
ipnet = "2.3.1"
json = "0.12.4"
lazy_static = "1.4.0"
liquid = "0.23.1"
log = "0.4.14"
lol_html = "0.3.1"
loupe = "0.1.3"
maplit = "1.0.2"
matches = "0.1.9"
mime = "0.3.16"
minidom = "0.13.0"
once_cell = "1.9.0"
pulldown-cmark = "0.9.1"
regex = "1.5.4"
rhai = { version = "1.5.0", features = [ "decimal", "internals", "metadata", "serde", "sync", "unicode-xid-ident" ] } # Embedded scripting for Rust
quick-xml = "0.22.0"
serde = { version = "1.0.136", features = ["derive"] } # Generic serialize/deserialize framework
serde_json = "1.0.79"
serde_yaml = "0.8.23"
strsim = "0.10.0"
tera = "1.15.0"
toml = { version = "0.5.8", features = ["preserve_order"] } # TOML encoder/decoder
typeables = "2.3.0"
unicode-segmentation = "1.9.0"
url = "2.2.2"
version_check = "0.9.4"
walkdir = "2.3.2"
yaml-rust = "0.4.5"

# [dev-dependencies]
# cargo-crev = "*"
# cargo-edit = "*"
# flamegraph = "*"
