[package]
name = "sita"
version = "0.1.0"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
edition = "2021"
description = "Sita: static site generator (SSG) for Markdown and HTML"
readme = "README.md"
repository = "https://github.com/sixarm/sita-rust-crate/"
license = "MIT OR Apache-2.0 OR GPL-2.0 OR GPL-3.0"
keywords = ["static", "site", "generator", "ssg", "template"]
categories = ["web-programming", "template-engine", "text-processing"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# ammonia: HTML Sanitization
ammonia = "3.2.1"

# assertables: Runtime reliability checking macros
assertables = "5.2.0"

# base64: Encode and decode base64 as bytes or utf8
base64 = "0.13.0"

# bytes: Types and traits for working with bytes
bytes = "1.2.1"

# clap: Command Line Argument Parser
clap = { version = "3.2.20", features = ["regex", "yaml", "wrap_help"] } 

# confy: Boilerplate-free configuration management
confy = "0.6.1"

# env_logger: A logger that can be configured via environment variables
env_logger = "0.9.0"

# error-chain: Consistent error handling
error-chain = "0.12.4"

# glob: Match file paths against Unix shell style patterns
glob = "0.3.0"

# handlebars: Template engine based on JavaScript Handlebars templates
handlebars = { version = "4.3.4", features = ["script_helper"] }

# httpdate: HTTP date parsing and formatting
httpdate = "1.0.2"

# indoc: Indented document literals
indoc = "1.0.7"

# ipnet: Types and methods for working with IPv4 and IPv6 network addresses
ipnet = "2.5.0"

# json: JSON parser
json = "0.12.4"

# liquid: Templating language for Rust
liquid = "0.26.0"

# log: A Rust library providing a lightweight logging facade
log = "0.4.17"

# lol_html: Low Output Latency (LOL) streaming HTML rewriter
lol_html = "0.3.1"

# loupe: Analyse and profile Rust code memory usage
loupe = "0.1.3"

# maplit: Macros for container literals with specific type
maplit = "1.0.2"

# matches: A macro to evaluate if an expression matches a pattern
matches = "0.1.9"

# mime: Strongly Typed Mimes
mime = "0.3.16"

# minidom: A small, simple DOM implementation on top of quick-xml
minidom = "0.15.0"

# once_cell: Single assignment cells and lazy values
once_cell = "1.14.0"

# pulldown-cmark: A pull parser for CommonMark
pulldown-cmark = "0.9.2"

# regex: Regular expressions parser, compiler, and executer
regex = "1.6.0"

# rhai: Embedded scripting for Rust
rhai = { version = "1.10.0", features = [ "decimal", "internals", "metadata", "serde", "sync", "unicode-xid-ident" ] } # Embedded scripting for Rust

# quick-xml: High-performance XML reader and writer
quick-xml = "0.25.0"

# serde: Serialize/deserialize framework
serde = { version = "1.0.144", features = ["derive"] }

# serde_json: serialize/deserialize JavaScript Object Notation
serde_json = "1.0.85"

# serde_yaml: serialize/deserialize Yet Another Markup Language
serde_yaml = "0.9.11"

# strsim: String similarity metrics
strsim = "0.10.0"

# tera: Template engine based on Jinja2/Django templates
tera = "1.17.0"

# TOML encoder/decoder
toml = { version = "0.5.9", features = ["preserve_order"] } # TOML encoder/decoder

# TODO
typeables = "2.3.0"

# unicode-segmentation: Iterators which split strings on graphemes, words, etc.
unicode-segmentation = "1.9.0"

# url: URL library for Rust, based on the WHATWG URL Standard
url = "2.3.1"

# version_check: Check the version of the installed/running rustc
version_check = "0.9.4"

# walkdir: Recursive directory traversal
walkdir = "2.3.2"

# yaml-rust: YAML parser
yaml-rust = "0.4.5"

# [dev-dependencies]
# cargo-crev = "*"
# cargo-edit = "*"
# flamegraph = "*"
