[package]
name = "sita"
version = "0.3.0"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
edition = "2021"
description = "Sita: static site generator (SSG) for Markdown and HTML"
readme = "README.md"
repository = "https://github.com/sixarm/sita-rust-crate/"
license = "MIT OR Apache-2.0 OR GPL-2.0 OR GPL-3.0"
keywords = ["static", "site", "generator", "ssg", "template"]
categories = ["web-programming", "template-engine", "text-processing"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# ammonia: HTML Sanitization
ammonia = "4.0.0"

# assertables: Runtime reliability checking macros
assertables = "8.8.0"

# base64: Encode and decode base64 as bytes or utf8
base64 = "0.22.1"

# bytes: Types and traits for working with bytes
bytes = "1.7.2"

# clap: Command Line Argument Parser
clap = { version = "4.5.18", features = ["string", "wrap_help"] }

# confy: Boilerplate-free configuration management
confy = "0.6.1"

# env_logger: A logger that can be configured via environment variables
env_logger = "0.9.3"

# thiserror: Convenient derive macro for the standard library’s std::error::Error trait.
thiserror = "1.0.64"

# glob: Match file paths against Unix shell style patterns
glob = "0.3.1"

# handlebars: Template engine based on JavaScript Handlebars templates
handlebars = { version = "5.1.2", features = ["script_helper"] }

# httpdate: HTTP date parsing and formatting
httpdate = "1.0.3"

# indoc: Indented document literals
indoc = "2.0.5"

# ipnet: Types and methods for working with IPv4 and IPv6 network addresses
ipnet = "2.10.0"

# json: JSON parser
json = "0.12.4"

# liquid: Templating language for Rust
liquid = "0.26.9"

# log: A Rust library providing a lightweight logging facade
log = "0.4.22"

# lol_html: Low Output Latency (LOL) streaming HTML rewriter
lol_html = "1.2.1"

# loupe: Analyze and profile Rust code memory usage
loupe = "0.1.3"

# maplit: Macros for container literals with specific type
maplit = "1.0.2"

# matches: A macro to evaluate if an expression matches a pattern
matches = "0.1.10"

# mime: Strongly Typed Mimes
mime = "0.3.17"

# minidom: A small, simple DOM implementation on top of quick-xml
minidom = "0.15.2"

# once_cell: Single assignment cells and lazy values
once_cell = "1.19.0"

# pulldown-cmark: A pull parser for CommonMark
pulldown-cmark = "0.11.3"

# regex: Regular expressions parser, compiler, and executer
regex = "1.10.6"

# rhai: Embedded scripting for Rust
rhai = { version = "1.19.0", features = [ "decimal", "internals", "metadata", "serde", "sync", "unicode-xid-ident" ] } # Embedded scripting for Rust

# quick-xml: High-performance XML reader and writer
quick-xml = "0.25.0"

# serde: Serialize/deserialize framework
serde = { version = "1.0.210", features = ["derive"] }

# serde_json: serialize/deserialize JavaScript Object Notation
serde_json = "1.0.128"

# serde_yaml: serialize/deserialize Yet Another Markup Language
serde_yaml = "0.9.34"

# strsim: String similarity metrics
strsim = "0.10.0"

# tera: Template engine based on Jinja2/Django templates
tera = "1.20.0"

# TOML encoder/decoder
toml = { version = "0.8.19", features = ["preserve_order"] } # TOML encoder/decoder

# TODO
typeables = "2.3.0"

# unicode-segmentation: Iterators which split strings on graphemes, words, etc.
unicode-segmentation = "1.12.0"

# url: URL library for Rust, based on the WHATWG URL Standard
url = "2.5.2"

# version_check: Check the version of the installed/running rustc
version_check = "0.9.5"

# walkdir: Recursive directory traversal
walkdir = "2.5.0"

# yaml-rust: YAML parser
yaml-rust = "0.4.5"

# [dev-dependencies]
# cargo-crev = "*"
# cargo-edit = "*"
# cargo-upgrades = "*"
# flamegraph = "*"
